--- a/css/default/ead.css
+++ b/css/default/ead.css
@@ -1,6 +1,6 @@
 /* dynaXML CONTENT stylesheet for EAD */
 
-@import url("content.css");
+/*@import url("content.css");
 
 h1, h2, h3, h4 {
 font-family: arial, sans-serif;
@@ -8,4 +8,4 @@ font-family: arial, sans-serif;
 
 td {
 vertical-align: top;
-}
+}*/
